- works horizontal and vertically! - slicker design (sliders integrated in gradient instead of sticking out) - you can click both slider and canvas to add new color stop - wrapper element so that internal gradient picker css doesn't clash with external styling

--- a/plugin/jquery.gradientPicker.css
+++ b/plugin/jquery.gradientPicker.css
@@ -1,52 +1,100 @@
+.gradientPicker-root {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.gradientPicker-root canvas {
+    position: absolute;
+}
+.gradientPicker-root.gradientPicker-horizontal canvas {
+    /*margin-bottom: 14px;*/
+    /*
+    top: 0;
+    bottom: 14px;
+    left: 0;
+    right: 0;
+    */
+}
+.gradientPicker-root.gradientPicker-vertical canvas {
+    /*margin-left: 14px;*/
+    /*
+    top: 0;
+    bottom: 0;
+    left: 14px;
+    right: 0;
+    */
+}
+
 .gradientPicker-preview {
 	width: 100%;
 	height: 100%;
-	border: 1px solid rgba(0,0,0,0.2);
+	/*border: 1px solid rgba(0,0,0,0.2);*/
 	/*box-sizing: border-box;
 	-moz-box-sizing: border-box;*/
 }
 
 .gradientPicker-ctrlPt {
-	width: 8px;
-	height: 8px;
-	border: 2px solid gray;
+	width: 16px;
+	height: 16px;
 	position: absolute;
 	display: inline-block;
+
+    border-radius: 3px;
+    box-shadow: inset 0 0px 0px 1px rgba(0,0,0,0.4);
+
+/*
+    border-radius: 2px;
+    box-shadow: inset 0 1px 0 rgba(255,255,255,0.4), 0 2px 1px rgba(0,0,0,0.6);
+*/
 }
 
 .gradientPicker-ctrlPts {
 	position: relative;
-	height: 10px;
+    background: rgba(0,0,0,0.1);
+}
+.gradientPicker-horizontal .gradientPicker-ctrlPts {
+	height: 16px; /* must be same height as .gradientPicker-ctrlPt */
 	width: 100%;
+}
+.gradientPicker-vertical .gradientPicker-ctrlPts {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+	width: 16px; /* must be same width as .gradientPicker-ctrlPt */
 }
 
 .gradientPicker-ptConfig {
 	position: absolute;
-	width: 35px;
-	height: 40px;
+	/*width: 35px;*/
+	/*height: 40px;*/
 	z-index: 1;
-	margin-top: 2px;
 
-	background-color: white;
-	border-radius: 5px;
-	border: 1px solid rgba(0,0,0,0.2);
-	padding: 0 3px;
+	/*background-color: white;*/
+	/*border-radius: 5px;*/
+	/*border: 1px solid rgba(0,0,0,0.2);*/
+	/*padding: 0 3px;*/
 	-webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 	-moz-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 	box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 }
+.gradientPicker-horizontal .gradientPicker-ptConfig {
+	/*margin-top: 16px;*/
+	margin-left: 0;
+}
+.gradientPicker-vertical .gradientPicker-ptConfig {
+	margin-top: 0;
+	margin-left: 16px;
+}
+.gradientPicker-ptConfig .color-chooser {
+    margin-top: 0;
+}
 
 .gradientPicker-close {
 	position: absolute;
-	top: -4px;
-	right: -4px;
-	/*font-size: 18px;
-	font-weight: bold;
-	color: black;
-	line-height: 20px;
-	text-shadow: 0 1px 0 white;
-	opacity: 0.2;
-	filter: alpha(opacity=20);*/
+	top: -7px;
+	right: -7px;
 	width: 16px;
 	height: 16px;
 	background-image: url("circle_remove.png");
